--- a/src/styles/page404.css
+++ b/src/styles/page404.css
@@ -1,147 +1,178 @@
 .error-container {
-    text-align: center;
-    font-size: 180px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 800;
-    margin: 20px 15px;
+  text-align: center;
+  font-size: 200px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 800;
+  margin: 20px 15px;
 }
 .error-container > span {
-    display: inline-block;
-    line-height: 0.7;
-    position: relative;
-    color: #FF6060;
+  display: inline-block;
+  line-height: 0.7;
+  position: relative;
+  color: #ff6060;
 }
 .error-container > span > span {
-    display: inline-block;
-    position: relative;
+  display: inline-block;
+  position: relative;
 }
 .error-container > span:nth-of-type(1) {
-    perspective: 1000px;
-    perspective-origin: 500% 50%;
-    color: #FF6060;
+  perspective: 1000px;
+  perspective-origin: 500% 50%;
+  color: #ff6060;
 }
 .error-container > span:nth-of-type(1) > span {
-    transform-origin: 50% 100% 0px;
-    transform: rotateX(0);
-    animation: easyoutelastic 6.5s infinite;
+  transform-origin: 50% 100% 0px;
+  transform: rotateX(0);
+  animation: loosenail 6.5s infinite;
 }
 .error-container > span:nth-of-type(2) {
-    perspective: 1000px;
-    perspective-origin: 500% 50%;
-    transform-origin: 50% 100% 0px;
-    transform: scale(1, 1);
-    animation: deflate 6s infinite;
+  perspective: 1000px;
+  perspective-origin: 500% 50%;
+  transform-origin: 50% 100% 0px;
+  transform: scale(1, 1);
+  animation: deflate 6s infinite;
 }
 
 .error-container > span:nth-of-type(3) {
-    perspective: none;
-    perspective-origin: 50% 50%;
-    color: #FF6060;
+  perspective: none;
+  perspective-origin: 50% 50%;
+  color: #ff6060;
 }
 .error-container > span:nth-of-type(3) > span {
-    transform-origin: center 100% 0px;
-    transform: rotate(0deg);
-    animation: rotatedrop 5.5s infinite;
+  transform-origin: center 100% 0px;
+  transform: rotate(0deg);
+  animation: fallover 5.5s infinite;
 }
 
 @keyframes deflate {
-    0% {
-        transform: scale(1, 1);
-    }
-    40% {
-        transform: scale(2.1, 0.2);
-    }
-    60% {
-        transform: scale(1.8, 0.5);
-    }
-    62% {
-        transform: scale(1.7, 0.6);
-    }
-    65% {
-        transform: scale(1.6, 0.6);
-    }
-    68% {
-        transform: scale(1.5, 0.6);
-    }
-    70% {
-        transform: scale(1.4, 0.7);
-    }
-    72% {
-        transform: scale(1.3, 0.7);
-    }
-    75% {
-        transform: scale(1.2, 0.9);
-    }
-    78% {
-        transform: scale(1.1, 1);
-    }
-    100% {
-        transform: scale(1, 1);
-    }
+  0% {
+    transform: scale(1, 1);
+  }
+  40% {
+    transform: scale(2.1, 0.2);
+  }
+  60% {
+    transform: scale(1.8, 0.5);
+  }
+  62% {
+    transform: scale(1.7, 0.6);
+  }
+  65% {
+    transform: scale(1.6, 0.6);
+  }
+  68% {
+    transform: scale(1.5, 0.6);
+  }
+  70% {
+    transform: scale(1.4, 0.7);
+  }
+  72% {
+    transform: scale(1.3, 0.7);
+  }
+  75% {
+    transform: scale(1.2, 0.9);
+  }
+  78% {
+    transform: scale(1.1, 1);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
 }
 
-@keyframes easyoutelastic {
-    0% {
-        transform: rotateX(0);
-    }
-    9% {
-        transform: rotateX(210deg);
-    }
-    13% {
-        transform: rotateX(150deg);
-    }
-    16% {
-        transform: rotateX(200deg);
-    }
-    18% {
-        transform: rotateX(170deg);
-    }
-    20% {
-        transform: rotateX(180deg);
-    }
-    80% {
-        transform: rotateX(180deg);
-    }
-    85% {
-        transform: rotateX(230deg);
-    }
-    88% {
-        transform: rotateX(270deg);
-    }
-    92% {
-        transform: rotateX(340deg);
-    }
-    100% {
-        transform: rotateX(0);
-    }
+@keyframes loosenail {
+  0% {
+    transform: rotateX(0);
+  }
+  9% {
+    transform: rotateX(210deg);
+  }
+  13% {
+    transform: rotateX(150deg);
+  }
+  16% {
+    transform: rotateX(200deg);
+  }
+  18% {
+    transform: rotateX(170deg);
+  }
+  20% {
+    transform: rotateX(180deg);
+  }
+  80% {
+    transform: rotateX(180deg);
+  }
+  85% {
+    transform: rotateX(230deg);
+  }
+  88% {
+    transform: rotateX(270deg);
+  }
+  92% {
+    transform: rotateX(340deg);
+  }
+  100% {
+    transform: rotateX(0);
+  }
 }
 
-@keyframes rotatedrop {
-    0% {
-        transform: rotate(0);
-    }
-    10% {
-        transform: rotate(35deg);
-    }
-    12% {
-        transform: rotate(30deg);
-    }
-    14% {
-        transform: rotate(36deg);
-    }
-    17% {
-        transform: rotate(33deg);
-    }
-    20% {
-        transform: rotate(90deg);
-    }
-    70% {
-        transform: rotate(90deg);
-    }
-    80% {
-        transform: rotate(0);
-    }
-    100% {
-        transform: rotateX(0);
-    }
+@keyframes fallover {
+  0% {
+    transform: rotate(0);
+  }
+  10% {
+    transform: rotate(35deg);
+  }
+  12% {
+    transform: rotate(30deg);
+  }
+  14% {
+    transform: rotate(36deg);
+  }
+  17% {
+    transform: rotate(33deg);
+  }
+  20% {
+    transform: rotate(90deg);
+  }
+  70% {
+    transform: rotate(90deg);
+  }
+  80% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotateX(0);
+  }
+}
+.message-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: auto;
+  align-items: center;
+  text-align: center;
+}
+.error-message {
+  color: var(--textColor);
+  padding-top: 8rem;
+  font-size: 1.5rem;
+}
+.error-redirect {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+.error-redirect a,
+.error-redirect a:visited {
+  color: var(--textColor);
+  font-size: 1rem;
+}
+
+@media (max-width: 768px) {
+  .error-container {
+    font-size: 120px;
+  }
+  .error-message {
+    padding: 2rem;
+  }
 }
