--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,19 +1,27 @@
 * {
+  --textLightColor:#ffffff;  
+  --textDarkColor:#666666;
   --textColor: #ff6060;
   --textHover: #ee1010;
   --borderColor: #ff6060;
   font-family: 'Montserrat', sans-serif;
 }
 
+body{
+    margin:auto;
+    max-width:1800px;
+}
+
 .header-menu {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 100%;
+  width: 99%;
+  margin:auto;
 }
 
 .logo img {
-  width: 210px; /*145*/
+  width: 210px; 
   height: auto;
 }
 .nav-bar {
