--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -5,8 +5,8 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  position:absolute;
-  bottom:.3rem;
+  position:relative;
+  top: 2rem;
 }
 .footer-logo img {
   width: 120px;
