--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -8,8 +8,13 @@
 }
 
 body{
+    position:relative;
+    max-width: 1600px;
+    display:flex;
+    flex-direction: column;
+    justify-content:space-around;
     margin:auto;
-    max-width:1800px;
+    
 }
 
 .header-menu {
@@ -18,6 +23,7 @@ body{
   justify-content: space-between;
   width: 99%;
   margin:auto;
+  margin-bottom: 30px;
 }
 
 .logo img {
