--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,13 +1,20 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  --textLightColor:#ffffff;  
+  --textDarkColor:#666666;
+  --textColor: #ff6060;
+  --textHover: #ee1010;
+  --borderColor: #ff6060;
+  --bgGreyColor: #f6f6f6;
+  --bgHover:#ee5050;
+  font-family: 'Montserrat', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+    position:relative;
+    max-width: 1600px;
+    display:flex;
+    flex-direction: column;
+    justify-content:space-around;
+    margin:auto;
+    
 }
