--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,23 +3,28 @@
   flex-direction: row;
   justify-content: space-between;
   width: 99%;
-  margin:auto;
+  margin: auto;
   margin-bottom: 30px;
 }
 
 .logo img {
-  width: 200px; 
+  width: 200px;
   height: auto;
 }
-.nav-bar {
+
+.nav-burger {
+  display: none;
+}
+
+.nav-menu {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 30%;
-  gap:4%;
+  gap: 4%;
 }
-.nav-bar a,
-.nav-bar a:visited {
+.nav-menu a,
+.nav-menu a:visited {
   width: 8rem;
   white-space: nowrap;
   color: var(--textColor);
@@ -29,11 +34,11 @@
   padding: 4px;
   font-size: 1.5rem;
 }
-.nav-bar >div{
-    width:20%;
+.nav-menu > div {
+  width: 20%;
 }
 
-.nav-bar a:hover {
+.nav-menu a:hover {
   color: var(--textHover);
   border-bottom: 3px solid var(--textHover);
 }
@@ -43,18 +48,56 @@
   font-weight: 600;
   border-bottom: 2px solid var(--borderColor);
 }
+.bar {
+  width: 25px;
+  height: 3px;
+  background-color: var(--borderColor);
+  margin: 5px 0;
+  transition: 0.4s;
+  border-radius: 10px;
+}
 
 @media (max-width: 768px) {
   .logo img {
     width: 145px;
   }
-  .nav-bar {
+  .nav-menu {
     width: 50%;
   }
-  .nav-bar a,
-  .nav-bar a:visited  {
+  .nav-menu a,
+  .nav-menu a:visited {
     width: 7rem;
     text-transform: uppercase;
-    font-size:1rem;
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .nav-burger {
+    display: block;
+    position: relative;
+    top: 8px;
+    right: 8px;
+  }
+
+  .nav-menu {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 7px;
+    right: 7px;
+    background: var(--borderColor);
+    background: linear-gradient(
+      270deg,
+      var(--borderColor) 0%,
+      var(--bgGreyColor) 40%
+    );
+    padding: 10px;
+  }
+
+  .nav-menu.open {
+    display: flex;
+    width: 40%;
+    z-index: 99;
   }
 }
