--- a/src/styles/logement.css
+++ b/src/styles/logement.css
@@ -1,3 +1,10 @@
+.caroussel-container{
+    position:relative;
+    width:100%;
+    height:24rem;
+    margin-bottom: 1rem;
+}
+
 .title-container {
   display: flex;
   flex-direction: row;
@@ -48,7 +55,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  align-items: center;
+  align-items: flex-end;
   margin-right: 10px;
   width: 100%;
 }
@@ -57,9 +64,14 @@
   font-size: 1.3rem;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  flex-wrap: wrap;
-  width: 50%;
+  overflow: visible;
+  text-align: end;
+  padding-right: 8px;
+  flex-wrap: wrap-reverse;
+  width: 1%;
+}
+.house-owner-pic {
+  width: 3.1rem;
 }
 .house-owner-pic img {
   border-radius: 50%;
@@ -78,13 +90,16 @@
   flex-direction: row;
   width: 100%;
   justify-content: space-between;
-  gap: 2%;
+  gap: 4%;
 }
 .house-dropdown-group.drop-container {
-  width: 49%;
+  width: 48%;
 }
 
 @media (max-width: 480px) {
+.caroussel-container{
+    height:18rem;
+}
   .title-container {
     flex-direction: column;
   }
@@ -106,6 +121,9 @@
   }
   .house-owner-name {
     font-size: 0.8rem;
+  }
+  .house-owner-pic {
+    width: 2.1rem;
   }
   .house-owner-pic img {
     height: 2rem;
