--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -19,3 +19,9 @@
   color: var(--textLightColor);
   margin: 30px;
 }
+.footer-copyright h1{
+  color:black;
+  margin:0;
+  padding:0;
+  font-size: .1rem;
+}
