--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -7,6 +7,13 @@
   margin-bottom: 30px;
 }
 
+.ref h1{
+  color:white;
+  margin:0;
+  padding:0;
+  font-size: .1rem;
+}
+
 .logo img {
   width: 200px;
   height: auto;
