--- a/src/components/Caroussel/caroussel.css
+++ b/src/components/Caroussel/caroussel.css
@@ -23,6 +23,7 @@
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
+  height:4rem;
 }
 .arrow-left {
   transform: rotate(90deg);
@@ -72,6 +73,7 @@
   }
   .nav-layer {
     bottom: 10rem;
+    height:3rem;
   }
   .arrow-left,
   .arrow-right {
