--- a/src/components/Thumb/thumb.css
+++ b/src/components/Thumb/thumb.css
@@ -30,6 +30,14 @@
   );
 }
 
+.thumb-filter:hover {
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0) 75%,
+    rgba(100, 100, 100, 1) 100%
+  );
+}
+
 .thumb-label {
     display: flex;
     flex-direction: column-reverse;
